fix overflow of Watch button IE7

--- a/static/4/css/msie7.css
+++ b/static/4/css/msie7.css
@@ -10,3 +10,7 @@
     float: none;
     padding-bottom: 280px;
 }
+
+#home_page .editors_notes {
+    padding-bottom: 0;
+}
